--- a/css/work.css
+++ b/css/work.css
@@ -47,9 +47,8 @@
 	height: 25px;
 	width: 40%;
 }
-#search-box input[type='button']{
+#search-box select{
 	height: 29px;
-	width: 10%;
 }
 .hide-work{
 	display: none;
@@ -66,4 +65,21 @@
 .nocheck{
 	color: #CC3333;
 	font-size: 16px;
+}
+
+
+.work-ch-unaudit{
+	font-size: 16px;
+	color: #555;
+	font-weight: bold;
+}
+.work-ch-pass{
+	font-size: 16px;
+	color:#339933;
+	font-weight: bold;
+}
+.work-ch-unpass{
+	font-size: 16px;
+	color: #CC3333;
+	font-weight: bold;
 }
