--- a/css/main.css
+++ b/css/main.css
@@ -60,3 +60,120 @@ body{
 	color: #FFF;
 	background-color: #CC0033;
 }
+
+
+
+
+
+/*Login*/
+
+/*登入*/
+
+.login{
+	width: 425px;
+	text-align: left;
+  	background-color: #ffffff;
+	display: inline-block;
+	vertical-align: middle;
+	margin-top: 150px;
+	padding: 15px;
+}
+
+#cont.add{
+
+	width: 700px;
+    margin-top: 20px;
+}
+
+.login a{
+	color: #7285dd;
+	text-decoration: none;
+}
+
+.login h1{
+	padding-left: 5px;
+
+}
+
+.form{
+	padding: 10px;
+}
+
+.addform{
+    padding-left: 40px;
+}
+
+.null-echo{
+    position: absolute;
+	font-weight: bold;
+	color: #FF0000;
+	padding-left: 10px;
+}
+
+#login-lightbox{
+	display: none;
+	position: fixed;
+	left: 0;
+	top: 0;
+	z-index: 100;
+	width: 100%;
+	height: 100%;
+	background: rgba(54, 54, 54, 0.6) ;
+	text-align: center;
+	color: #222;
+}
+
+.login-hint{
+	font-size: 13.5px;
+	color: #555;
+	padding-top: 10px;
+}
+
+.btn-submit{
+	height: 30px;
+	width: 200px;
+	margin-bottom: 10px;
+	margin-top: 20px;
+	color: #333;
+}
+.btn-submit2{
+	height: 30px;
+	width: 200px;
+	margin-bottom: 10px;
+	margin-top: 20px;
+	color: #333;
+	float: right;
+}
+
+.login-icon{
+	font-size: 30px;
+	color: #555;
+	vertical-align: middle;
+	width: 30px;
+}
+.login-input{
+	width: 270px;
+	height: 28px;
+	margin-bottom: 5px;
+	margin-bottom: 5px;
+	font-size: 20px;
+}
+.login-signup{
+	font-weight: bold;
+}
+.login-select{
+	height: 24px;
+	width: 80px;
+	font-size: 14px;
+}
+
+.login-exit{
+	float: right;
+    margin-left: 20px;
+    color: #888;
+}
+.login-exit:hover{
+	cursor: pointer;
+	color: #222;
+}
+
