--- a/css/work_detail_edit.css
+++ b/css/work_detail_edit.css
@@ -72,25 +72,18 @@
 	left: 0;
 	height: 100%;
 	width: 100%;
-	z-index:2;
+	z-index:10;
 	background-color: rgba(0,0,0,0.5);
 	text-align: center;
 	overflow: hidden;
 	white-space: nowrap;
 	box-shadow: 0px 2px 3px #888;
 }
-.staff-apply-form:before{
-	content: '';
-	display: inline-block;
-	height: 100%;
-	width: 0;
-	vertical-align: middle;
-}
+
 
 .staff-apply-box{
-	padding: 2%;
-	margin-top: -5%;
-	vertical-align: middle;
+	padding: 20px;
+	margin-top: 130px;
 	text-align: left;
 	display: inline-block;
 	width: 30%;
